<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text=" "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:textSize="30sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="120dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_menu_share"
            android:id="@+id/imageView7"
            android:layout_weight="1"
            android:contentDescription="@string/share"/>

        <TextView
            android:text="@string/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:layout_marginStart="5dp"  />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="120dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageView6"
            android:layout_weight="1"
            android:contentDescription="@string/information"
            android:background="@drawable/ic_library_books_black_24dp" />

        <TextView
            android:text="@string/information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="120dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_menu_manage"
            android:id="@+id/imageView5"
            android:layout_weight="1"
            android:contentDescription="@string/playbook"/>

        <TextView
            android:text="@string/playbook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:layout_marginStart="5dp"  />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="120dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/com_facebook_favicon_blue"
            android:id="@+id/imageView3"
            android:layout_weight="1"
            android:contentDescription="@string/group" />

        <TextView
            android:text="@string/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:layout_marginStart="5dp"  />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="120dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/com_facebook_favicon_blue"
            android:id="@+id/imageView"

            android:contentDescription="@string/page"/>

        <TextView
            android:text="@string/page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:layout_marginStart="5dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="120dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageView4"
            android:layout_weight="1"
            android:contentDescription="@string/notification"
            android:background="@drawable/ic_menu_send" />

        <TextView
            android:text="@string/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:layout_marginStart="5dp"  />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="120dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_menu_share"
            android:id="@+id/imageView2"
            android:layout_weight="1"
            android:contentDescription="@string/profil"/>

        <TextView
            android:text="@string/profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:layout_marginStart="5dp"  />
    </LinearLayout>
</LinearLayout>